Added high score and score

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <div id="scoreBox">Score: 0</div>
+        <div id="highScoreBox">Highest: 0</div>
         <div id="board">
 
         </div>
