Added snake image

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <div class="container">
         <div id="scoreBox">Score: 0</div>
-        <div id="highScoreBox">Highest: 0</div>
+        <div id="highScoreBox">High Score: 0</div>
         <div id="board">
-
         </div>
+        <div id="snakeImage"></div>
     </div>
 </body>
 <script src="./js/script.js"></script>
